--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "fast-equals": "^4.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-json-to-csv": "^1.2.0",
         "react-scripts": "5.0.1",
         "sass": "^1.57.1",
         "uuid": "^9.0.0",
