--- a/client/.gitignore
+++ b/client/.gitignore
@@ -21,3 +21,23 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Firebase generated files
+firebase.json
+firebase-debug.log
+firebase-debug.log.gz
+
+# Firebase hosting files
+public/
+firebase.json
+firebase-debug.log
+firebase-debug.log.gz
+
+# Firebase functions files
+functions/node_modules
+functions/*.log
+functions/*.env
+
+# Firebase firestore files
+firestore.rules
+firestore.indexes.json
